@@ -1,5 +1,9 @@
 # vim: set noexpandtab:
 
+2012-10-22 Steve
+	* Updated period enum and function in SusyDefs
+	* Cleaned up some white space and removed obsolete code
+
 2012-10-20 Steve
 	* Fixed formatting and variable naming conventions
 
